--- a/assets/scss/site/_nav.scss
+++ b/assets/scss/site/_nav.scss
@@ -1,3 +1,156 @@
-nav.site-nav {
-  background-color: floralwhite;
+@import 'global-variables';
+
+
+header#site-header {
+  a {
+    color: $primary-color-text;
+    text-decoration: none;
+  }
+  /* Force accessible focus state */
+  * {
+    box-sizing: content-box;
+    
+    &:focus {
+      background-color: $primary-color-light !important;
+    }
+  }
+  nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    background-color: $primary-color;
+    color: $primary-color-text;
+  }
+  
+  h1 {
+    font-size: 2rem;
+    line-height: 2.1rem;
+  }
+  
+  #site-nav {
+    > .menu {
+      display: none;
+      flex-direction: column;
+  
+      &.show {
+        display: flex;
+      }
+    }
+
+    button {
+      color: $primary-color-text;
+    }
+  
+    > .menu-toggle {
+      display: block;
+      margin-left: auto;
+      background: transparent;
+      border: 0;
+      font-size: 2rem;
+      padding: 0.5rem 2rem;
+    }
+  
+    > .branding {
+      display: block;
+      font-size: 1.5rem;
+      padding: 0.5rem 2rem;
+    }
+  
+    @media screen and (max-width: 1069px) {
+      > .menu {
+        width: 100%;
+      }
+    }
+  
+    @media screen and (min-width: 1070px) {
+      > .menu {
+        display: flex;
+        flex-direction: row;
+      }
+  
+      > .menu-toggle {
+        display: none;
+      }
+    }
+  }
+  
+  .visually-hidden {
+    position: absolute !important;
+    width: 1px !important;
+    height: 1px !important;
+    padding: 0 !important;
+    margin: -1px !important;
+    overflow: hidden !important;
+    clip: rect(0, 0, 0, 0) !important;
+    white-space: nowrap !important;
+    border: 0 !important;
+  }
+  
+  .menu {
+    display: flex;
+    flex-direction: row;
+    background-color: $primary-color;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  
+    &.dropdown {
+      display: none;
+      flex-direction: column;
+  
+      @media screen and (min-width: 1070px) {
+        li.menu-item .menu.dropdown {
+          top: 0;
+          left: 100%;
+        }
+      }
+    }
+  
+    @media screen and (max-width: 1069px) {
+      .menu .menu-link {
+        padding-left: 3rem;
+      }
+  
+      .menu .menu .menu-link {
+        padding-left: 4rem;
+      }
+    }
+  
+    .menu-link,
+    .menu-toggle {
+      display: block;
+      background-color: $primary-color;
+      text-decoration: none;
+      border: none;
+      padding: 1rem 2rem;
+  
+      &:hover {
+        background-color: $primary-color-hover;
+      }
+    }
+  
+    .menu-link:active {
+      background-color: $primary-color-light;
+    }
+  
+    .menu-item {
+      position: relative;
+  
+      &.dropdown > .dropdown-toggle::after {
+        content: "▼";
+        margin-left: 0.5rem;
+        display: inline-block;
+      }
+  
+      .menu.dropdown.show {
+        display: flex;
+  
+        @media screen and (min-width: 1070px) {
+          position: absolute;
+          left: 0;
+        }
+      }
+    }
+  }
 }
