--- a/assets/scss/site/_global-variables.scss
+++ b/assets/scss/site/_global-variables.scss
@@ -1,6 +1,9 @@
 $font-stack:    Helvetica, sans-serif;
 $primary-color: #6F468F;
+$primary-color-text: #FFF;
 $primary-color-light: #C4ABD8;
 $primary-color-hover: #A264D2;
 $secondary-color: green;
 $tertiary-color: orange;
+
+$desktop-width: 768px;
