--- a/layouts/partials/site/head.html
+++ b/layouts/partials/site/head.html
@@ -7,6 +7,8 @@
   <!-- Social Sharing -->
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
+  <!-- Font Awesome -->
+  <script src="https://use.fontawesome.com/a5e493d1ed.js"></script>
   <!-- Site SCSS -->
   {{ $style := resources.Get "scss/main.scss" | resources.ToCSS | fingerprint}}
   <link rel="stylesheet" href="{{ $style.Permalink }}">
