--- a/assets/scss/site.scss
+++ b/assets/scss/site.scss
@@ -22,10 +22,12 @@ footer {
 main {
   width: 100%;
   min-height: 100vh;
-  margin: 0 auto;
-  padding: 0 2rem;
+  padding-top: 6em;
 
   @media screen and (min-width: 1070px) {
     width: 80%;
+  }
+  article {
+    padding-left: 2em;
   }
 }
