--- a/assets/scss/site/_nav.scss
+++ b/assets/scss/site/_nav.scss
@@ -2,6 +2,10 @@
 
 
 header#site-header {
+  position: fixed;
+  top: 0;
+  margin-top: 0;
+  padding-top: 0;
   a {
     color: $primary-color-text;
     text-decoration: none;
@@ -21,11 +25,6 @@ header#site-header {
     align-items: center;
     background-color: $primary-color;
     color: $primary-color-text;
-  }
-  
-  h1 {
-    font-size: 2rem;
-    line-height: 2.1rem;
   }
   
   #site-nav {
