--- a/assets/scss/site/_nav.scss
+++ b/assets/scss/site/_nav.scss
@@ -6,6 +6,7 @@ header#site-header {
   top: 0;
   margin-top: 0;
   padding-top: 0;
+  z-index: 2;
   a {
     color: $primary-color-text;
     text-decoration: none;
@@ -19,6 +20,7 @@ header#site-header {
     }
   }
   nav {
+    height: $site-nav-height;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
