--- a/layouts/game/list.html
+++ b/layouts/game/list.html
@@ -4,8 +4,10 @@
         <h1>{{ .Title }}</h1>
         <!-- <p>{{ .IsDescendant (.GetPage "/games") }}</p> -->
         <blockquote>{{ .Description | markdownify }}</blockquote>
-        {{- partial "games/nav.html" . -}}
     </header>
+    <aside class="game-nav">
+        {{- partial "games/nav.html" . -}}
+    </aside>
     <figure>
         <figcaption>Details:</figcaption>
         <dl>
