--- a/layouts/shortcodes/rolltable.html
+++ b/layouts/shortcodes/rolltable.html
@@ -20,7 +20,7 @@
 <table class="rolltable" id="{{ $id }}">
   <caption>
     <p class="table-caption">
-      <button onclick="toggleTableCollapse({{ $name }})" id="{{ $id }}-collapser"><i class="fas fa-caret-down"></i></button>
+      <button onclick="toggleTableCollapse({{ $name }})" id="{{ $id }}-collapser"><i class="fa fa-caret-down"></i></button>
       {{$caption}} Click on the <strong>Result</strong> header to roll automatically. Click on any other header to reroll for that column.
     </p>
     <p class="result" id="result-{{ $name }}"></p>
