--- a/layouts/game/baseof.html
+++ b/layouts/game/baseof.html
@@ -10,7 +10,12 @@
     <body>
         {{- partial "site/header.html" . -}}
         <main id="content" class="{{ lower (urlize $game.Title) }}">
-        {{- block "main" . }}{{- end }}
+          <aside class="game-nav">
+            {{- partial "games/nav.html" . -}}
+          </aside>
+          <article class="game">
+            {{- block "main" . }}{{- end }}
+          </article>
         </main>
         {{- partial "site/footer.html" . -}}
     </body>
